v3.1.7/_sources/plugins/device_enrichment_details_info_module.rst.txt
.. Document meta

:orphan:

.. |antsibull-internal-nbsp| unicode:: 0xA0
    :trim:

.. role:: ansible-attribute-support-label
.. role:: ansible-attribute-support-property
.. role:: ansible-attribute-support-full
.. role:: ansible-attribute-support-partial
.. role:: ansible-attribute-support-none
.. role:: ansible-attribute-support-na

.. Anchors

.. _ansible_collections.cisco.dnac.device_enrichment_details_info_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.dnac.device_enrichment_details_info -- Information module for Device Enrichment Details
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This plugin is part of the `cisco.dnac collection <https://galaxy.ansible.com/cisco/dnac>`_ (version 3.1.7).

    To install it use: :code:`ansible-galaxy collection install cisco.dnac`.

    To use it in a playbook, specify: :code:`cisco.dnac.device_enrichment_details_info`.

.. version_added

.. versionadded:: 1.0.0 of cisco.dnac

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Get all Device Enrichment Details.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

Requirements
------------
The below requirements are needed on the host that executes this module.

- dnacentersdk


.. Options

Parameters
----------

.. raw:: html

    <table  border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="1">Parameter</th>
            <th>Choices/<font color="blue">Defaults</font></th>
                        <th width="100%">Comments</th>
        </tr>
                    <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-headers"></div>
                    <b>headers</b>
                    <a class="ansibleOptionLink" href="#parameter-headers" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">dictionary</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Additional headers.</div>
                                                        </td>
            </tr>
                        </table>
    <br/>

.. Attributes


.. Notes


.. Seealso

See Also
--------

.. seealso::

   `Device Enrichment Details reference <https://dnacentersdk.readthedocs.io/en/latest/api/api.html#v3-0-0-summary>`_
       Complete reference of the Device Enrichment Details object model.

.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: Get all Device Enrichment Details
      cisco.dnac.device_enrichment_details_info:
        dnac_host: "{{dnac_host}}"
        dnac_username: "{{dnac_username}}"
        dnac_password: "{{dnac_password}}"
        dnac_verify: "{{dnac_verify}}"
        dnac_port: "{{dnac_port}}"
        dnac_version: "{{dnac_version}}"
        dnac_debug: "{{dnac_debug}}"
        headers:
          custom: value
      register: result





.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. raw:: html

    <table border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="1">Key</th>
            <th>Returned</th>
            <th width="100%">Description</th>
        </tr>
                    <tr>
                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="return-dnac_response"></div>
                    <b>dnac_response</b>
                    <a class="ansibleOptionLink" href="#return-dnac_response" title="Permalink to this return value"></a>
                    <div style="font-size: small">
                      <span style="color: purple">list</span>
                       / <span style="color: purple">elements=dictionary</span>                    </div>
                                    </td>
                <td>always</td>
                <td>
                                            <div>A dictionary or list with the response returned by the Cisco DNAC Python SDK</div>
                                        <br/>
                                            <div style="font-size: smaller"><b>Sample:</b></div>
                                                <div style="font-size: smaller; color: blue; word-wrap: break-word; word-break: break-all;">[
      {
        &quot;deviceDetails&quot;: {
          &quot;family&quot;: &quot;string&quot;,
          &quot;type&quot;: &quot;string&quot;,
          &quot;location&quot;: {},
          &quot;errorCode&quot;: &quot;string&quot;,
          &quot;macAddress&quot;: &quot;string&quot;,
          &quot;role&quot;: &quot;string&quot;,
          &quot;apManagerInterfaceIp&quot;: &quot;string&quot;,
          &quot;associatedWlcIp&quot;: &quot;string&quot;,
          &quot;bootDateTime&quot;: &quot;string&quot;,
          &quot;collectionStatus&quot;: &quot;string&quot;,
          &quot;interfaceCount&quot;: &quot;string&quot;,
          &quot;lineCardCount&quot;: &quot;string&quot;,
          &quot;lineCardId&quot;: &quot;string&quot;,
          &quot;managementIpAddress&quot;: &quot;string&quot;,
          &quot;memorySize&quot;: &quot;string&quot;,
          &quot;platformId&quot;: &quot;string&quot;,
          &quot;reachabilityFailureReason&quot;: &quot;string&quot;,
          &quot;reachabilityStatus&quot;: &quot;string&quot;,
          &quot;snmpContact&quot;: &quot;string&quot;,
          &quot;snmpLocation&quot;: &quot;string&quot;,
          &quot;tunnelUdpPort&quot;: {},
          &quot;waasDeviceMode&quot;: {},
          &quot;series&quot;: &quot;string&quot;,
          &quot;inventoryStatusDetail&quot;: &quot;string&quot;,
          &quot;collectionInterval&quot;: &quot;string&quot;,
          &quot;serialNumber&quot;: &quot;string&quot;,
          &quot;softwareVersion&quot;: &quot;string&quot;,
          &quot;roleSource&quot;: &quot;string&quot;,
          &quot;hostname&quot;: &quot;string&quot;,
          &quot;upTime&quot;: &quot;string&quot;,
          &quot;lastUpdateTime&quot;: 0,
          &quot;errorDescription&quot;: &quot;string&quot;,
          &quot;locationName&quot;: {},
          &quot;tagCount&quot;: &quot;string&quot;,
          &quot;lastUpdated&quot;: &quot;string&quot;,
          &quot;instanceUuid&quot;: &quot;string&quot;,
          &quot;id&quot;: &quot;string&quot;,
          &quot;neighborTopology&quot;: [
            {
              &quot;nodes&quot;: [
                {
                  &quot;role&quot;: &quot;string&quot;,
                  &quot;name&quot;: &quot;string&quot;,
                  &quot;id&quot;: &quot;string&quot;,
                  &quot;description&quot;: &quot;string&quot;,
                  &quot;deviceType&quot;: &quot;string&quot;,
                  &quot;platformId&quot;: &quot;string&quot;,
                  &quot;family&quot;: &quot;string&quot;,
                  &quot;ip&quot;: &quot;string&quot;,
                  &quot;softwareVersion&quot;: &quot;string&quot;,
                  &quot;userId&quot;: {},
                  &quot;nodeType&quot;: &quot;string&quot;,
                  &quot;radioFrequency&quot;: {},
                  &quot;clients&quot;: {},
                  &quot;count&quot;: {},
                  &quot;healthScore&quot;: 0,
                  &quot;level&quot;: 0,
                  &quot;fabricGroup&quot;: {},
                  &quot;connectedDevice&quot;: {}
                }
              ],
              &quot;links&quot;: [
                {
                  &quot;source&quot;: &quot;string&quot;,
                  &quot;linkStatus&quot;: &quot;string&quot;,
                  &quot;label&quot;: [],
                  &quot;target&quot;: &quot;string&quot;,
                  &quot;id&quot;: {},
                  &quot;portUtilization&quot;: {}
                }
              ]
            }
          ]
        }
      }
    ]</div>
                                    </td>
            </tr>
                        </table>
    <br/><br/>

..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Parsing errors

